[CHORE] gitignore에 파이어베이스 info.plist 추가

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,8 @@ DerivedData/
 .runtimeconfig.json
 .firebase/
 
+**/GoogleService-Info.plist
+
 ### fastlane ###
 # fastlane - A streamlined workflow tool for Cocoa deployment
 #
