--- a/Yomang/Resources/Yomang.entitlements
+++ b/Yomang/Resources/Yomang.entitlements
@@ -14,5 +14,9 @@
 	<array>
 		<string>group.academy.Yomang</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:yomanglabyomang.page.link</string>
+	</array>
 </dict>
 </plist>
