--- a/Yomang/Resources/Info.plist
+++ b/Yomang/Resources/Info.plist
@@ -15,5 +15,9 @@
 	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
